--- a/alayatodo/templates/todos.html
+++ b/alayatodo/templates/todos.html
@@ -4,7 +4,7 @@
 <div class="col-md-4 col-md-offset-4">
     <h1>Todo List:</h1>
     <table class="table table-striped">
-        <th>#</th><th>User</th><th>Description</th><th></th>
+        <th>#</th><th>User</th><th>Description</th><th>Status</th><th></th>
         {% for todo in todos %}
             <tr>
                 <td>{{ todo.id }}</td>
@@ -14,6 +14,15 @@
                        {{ todo.description }}
                     </a>
                 </td>
+                  <td>
+	                    {% if todo.completed == 0 %}
+	                     not completed
+	                    {% else:    %}
+	                     Completed
+	                     {% endif %}
+	                  
+                  </td>
+
                 <td>
                     <form method="post" action="{{ url_for('todo_delete', id=todo.id) }}">
                         <button type="submit" class="btn btn-xs btn-danger"><span class="glyphicon glyphicon-remove glyphicon-white"></span></button>
