--- a/alayatodo/static/css/main.css
+++ b/alayatodo/static/css/main.css
@@ -5,8 +5,46 @@ body {
 .login-form > div {
     margin-top: 10px;
 }
+
+.completed-1{
+	color:red;
+	text-decoration: line-through;
+	
+}
+#app {
+  font-family: 'Avenir', Helvetica, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-size: 20px;
+  text-align: center;
+  color: #2c3e50;
+  margin-top: 60px;
+}
+
+h1,
+h2 {
+  font-weight: normal;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+li {
+  display: inline-block;
+  margin: 0 10px;
+}
+
+.pagination {
+    margin: 10px 0;
+    margin-top: 0;
+    margin-bottom: 0;
+}
 .pagination-page-info {
     padding: .6em;
+    padding-top: 5px;
+    padding-bottom: 0;
     padding-left: 0;
     width: 40em;
     margin: .5em;
@@ -19,4 +57,8 @@ body {
     padding-left: 2px;
     padding: .1em .25em;
     font-size: 150%;
+}
+.active{
+	font-size:2em;
+	background-color: white;
 }
